# basilisk

./: .gitignore  README.md  pyproject.toml
basilisk/: __init__.py  __main__.py  basilisk.py  cipher.py  cli.py  password.py  utils.py
config/: sample.config.ini
